@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+17-Jul-2005
+~~~~~~~~~~~
+Bugfix: Opening a new filer window with a key press warped the pointer
+	to the top-left of the screen (Matthew Weier O'Phinney and Thomas
+	Leonard).
+
 16-Jul-2005
 ~~~~~~~~~~~
 Detect GCC 4 and disable pointer signedness warnings (Thomas Leonard).
